fixing scrollbars poping into existence, minor formattting

--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+html {
+    overflow: hidden;
+}
 body {
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
     background: #000;
+    margin: 0;
+    padding: 0;
 }
 h1 {
     animation-name: foo;
